expense-tracker-api/devservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: expensetracker-service
spec:
  type: LoadBalancer
  selector:
    app: expensetracker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
