expense-tracker-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensetracker-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - app.afet.online
    secretName: app-afet-tls
  - hosts:
    - api.afet.online
    secretName: api-afet-tls
  rules:
  - host: app.afet.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expensetracker-frontend-service
            port:
              number: 80
  - host: api.afet.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expensetracker-service
            port:
              number: 80
